# myappmaker

./: README.md  pyproject.toml
myappmaker/: __main__.py  appinfo.py  canvasscene.py  mainwindow.py  prefsmgmt.py  strokesdialog.py
myappmaker/strokesdialog/: __init__.py  constants.py  getnotfoundsvg.py  strokesrecordingdialog.py
myappmaker/strokesmgmt/: utils.py
myappmaker/strokesmgr/: __init__.py  constants.py  strokesdisplay.py  strokesrecordingdialog.py  strokesrecordingpanel.py  utils.py
